--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=MAX31855 Library
-version=1.0
+name=MAX31855-Library
+version=1.1
 author=Thomas Kaufmann
 maintainer=Thomas Kaufmann <tomkaufmann2004@gmail.com>
 sentence=Library for the MAX31855K module
-paragraph=Library for the MAX31855K module
+paragraph=
 category=Sensors
 url=https://github.com/Moarbue/MAX31855-library
 architectures=*
